--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,14 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    // for Mockito
+    testImplementation "org.mockito:mockito-core:2.25.1"
+    testImplementation 'org.mockito:mockito-inline:2.8.9'
+    androidTestImplementation "org.mockito:mockito-android:2.19.0"
+    testImplementation('com.nhaarman:mockito-kotlin:1.5.0') {
+        exclude group: 'org.jetbrains.kotlin'
+        exclude group: 'org.mockito'
+    }
+
 }
