--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.30"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.31"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -99,8 +99,10 @@ dependencies {
     testImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     testImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
 
-    // foe Espresso tests
+    // for Espresso tests
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // for UiAutomator
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 
 }
