--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,15 @@ android {
     compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
+    sourceSets {
+        androidTest {
+            java.srcDirs += "src/sharedTestData/java"
+        }
+        test {
+            java.srcDirs += "src/sharedTestData/java"
+        }
+    }
+
     defaultConfig {
         applicationId "q4.test_coverage.mytests"
         minSdkVersion 25
