Сделал запись теста главного экрана и второго экрана через Record Espresso Test. Тут протестировал кнопки, поля и актуальность полученных данных. В DetailsActivityRecordTest.kt также пришлось добавить функцию задержки времени delay().

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,4 +114,7 @@ dependencies {
     // for UiAutomator
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 
+    // for Record Espresso tests
+    androidTestImplementation 'androidx.test:rules:1.4.1-alpha03'
+
 }
